# utuputki2-client2

./: .gitignore  CMakeLists.txt  README.md
cmake-scripts/: FindSDL2.cmake  Findargtable2.cmake  Findwebsockets.cmake
src/: args.c  args.h  audio.c  audio.h  engine.c  engine.h  framework.c  framework.h  main.c  player.c  player.h  ringbuffer.c  ringbuffer.h  video.c  video.h
